--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debathena-pyhesiodfs (0.0.r150-0debathena4) unstable; urgency=low
+
+  * If /dev/fuse has group root, restart udev to work around LP #293502.
+
+ -- Anders Kaseorg <andersk@mit.edu>  Tue, 04 Nov 2008 03:52:27 -0500
+
 debathena-pyhesiodfs (0.0.r150-0debathena3) unstable; urgency=low
 
   * Fix a typo in the /lib/init/vars.sh part of the previous commit (which
