--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debathena-pyhesiodfs (0.0.r157-0debathena2) unstable; urgency=low
+
+  * Rebuild with new version of python-hesiod
+
+ -- Evan Broder <broder@mit.edu>  Thu, 20 Nov 2008 19:18:29 -0500
+
 debathena-pyhesiodfs (0.0.r157-0debathena1) unstable; urgency=low
 
   * New upstream release
