--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debathena-pyhesiodfs (0.0.r167-0debathena2) unstable; urgency=low
+
+  * Change "Debian-Athena Project" to "Debathena Project".
+
+ -- Tim Abbott <tabbott@mit.edu>  Sat, 24 Jan 2009 18:35:48 -0500
+
 debathena-pyhesiodfs (0.0.r167-0debathena1) unstable; urgency=low
 
   * New upstream release
