--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debathena-pyhesiodfs (0.0.r167-0debathena3) unstable; urgency=low
+
+  * Start pyhesiodfs before ssh so that users don't end up without their
+    homedirs
+
+ -- Evan Broder <broder@mit.edu>  Sat, 07 Mar 2009 16:32:07 -0500
+
 debathena-pyhesiodfs (0.0.r167-0debathena2) unstable; urgency=low
 
   * Change "Debian-Athena Project" to "Debathena Project".
