--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debathena-pyhesiodfs (0.0.r167-0debathena5) UNRELEASED; urgency=low
+
+  * Fix package name in maintainer scripts
+
+ -- Jonathan Reed <jdreed@mit.edu>  Tue, 27 Apr 2010 11:21:05 -0400
+
 debathena-pyhesiodfs (0.0.r167-0debathena4) unstable; urgency=low
 
   * Start PyHesiodFS with -o nonempty, in case there is anything in
