Add a sample config file; update manpage
- Add a sample config.ini and install it with the docs.
- Mention sample config file in manpage (and clean up the
  man page while we're at it.)

--- a/debian/pyhesiodfs.1
+++ b/debian/pyhesiodfs.1
@@ -10,10 +10,9 @@ pyhesiodfs \- PythonFUSE-based automounter for /mit
 uses the Python FUSE API to create a FUSE ("Filesystem in Userspace")
 filesystem mounted on /mit, which automatically looks up locker names
 in Hesiod and creates the necessary symlinks to the path in AFS.  It
-is the user's responsibility to obtain the necessary AFS tokens, though this is usually done at login time by PAM.  
+is the user's responsibility to obtain the necessary AFS tokens, though
+this is usually done at login time by PAM.
 
-Really, you should never need to run this command by hand, and the
-only reason this man page exists is because Debian Policy requires it.
 .SH OPTIONS
 Most options are passed directly to the Python FUSE option parser.
 Consult that documentation for the appropriate options.  
@@ -21,10 +20,21 @@ Consult that documentation for the appropriate options.
 On Debathena, it is typically invoked as:
 .B pyhesiodfs -f /mit -o nonempty
 
+.SH CONFIGURATION
+There is an optional config file, with inline documentation, installed
+at wherever your distribution installs documentation (probably
+/usr/share/doc).  Go read it.
+
 .SH FILES
 .I /etc/fuse.conf
 .RS
 Actually provided by fuse-utils, but diverted by the debathena-pyhesiodfs package.
+.RE
+
+.I /etc/pyhesiodfs/config.ini
+.RS
+The (optional) config file.  See above.
+
 .SH BUGS
 Probably.
 .SH AUTHOR
