--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+debathena-pyhesiodfs (1.1-0debathena2) unstable; urgency=low
+
+  * Add git-buildpackage configuration
+  * Update dependency from debathena-python-locker-support to
+    debathena-locker-support because that package got renamed
+  * Build-depend on python
+
+ -- Jonathan Reed <jdreed@mit.edu>  Wed, 12 Feb 2014 16:07:39 -0500
+
 debathena-pyhesiodfs (1.1-0debathena1) unstable; urgency=low
 
   * New upstream release (Trac: #766)
