--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debathena-pyhesiodfs (1.1-0debathena5) UNRELEASED; urgency=medium
+
+  * Replace python-support with dh-python.
+
+ -- Anders Kaseorg <andersk@mit.edu>  Sat, 18 Jun 2016 01:54:09 -0400
+
 debathena-pyhesiodfs (1.1-0debathena4) unstable; urgency=low
 
   * Add a systemd unit file, translated from the sysvinit script. (Trac: #962)
